fixing image sizing on smaller displays

--- a/website/eacr/static/css/eacr.css
+++ b/website/eacr/static/css/eacr.css
@@ -156,3 +156,9 @@ body.template-blogpage section.block-image img.blog-image {
     max-width: 100%;
     max-height: 450px;
 }
+
+.post-card-image {
+    min-width: 200px;
+    min-height: 200px;
+    display: inline-block;
+}
